# rag-approval-blueprint

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  BIBLE.md  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  HANDOFF.md  LICENSE  LICENSE-docs  README.md  SECURITY.md  pyproject.toml  setup.sh
.claude/hooks/: lint-on-edit.sh  protect-sensitive-files.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
akte/: 01-schutzbedarfsfeststellung.md  02-dsfa-baustein-rag.md  03-auslagerung-drittparteien.md  04-betriebskonzept.md  05-notfallkonzept.md  06-testnachweise.md  07-freigabevorlage.md  08-mitbestimmung-betriebsvereinbarung.md  README.md
app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
controls/: README.md  controls.md  controls.yaml
docs/: README.md  executive-summary.en.md  loeschnachweis.md  mapping-bait-vait-dora.md  quellen.md  who-uses-this.md
docs/adr/: 0002-warum-deutsch.md  (+3 more)
pilot/: 00-fallbeschreibung.md  07-freigabevorlage-final.md  README.md  controls-assessment.yaml  readiness-report.md
pilot-abgelehnt/: 00-fallbeschreibung.md  07-freigabevorlage-final.md  README.md  controls-assessment.yaml  readiness-report.md
scripts/: budget.sh  context.sh  gate.sh  meisterklasse-check.sh  namen-audit.sh  namen-rename.sh  secure.sh  session-snapshot.sh  state.sh
tests/: test_render_controls.py
tools/: README.md  akte-assistent.html  render_controls.py
(+28 files in other folders)
