[build-system]
# setuptools >= 83 — 79.0.1 carries PYSEC-2026-3447, fixed in 83.0.0 (pip-audit, CI supply-chain job).
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-approval-blueprint"
version = "0.1.0"
description = "Render the RAG control catalogue (controls.yaml) into an audit-ready Markdown catalogue and a readiness report."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# setuptools is pinned here too, not only in build-system: the audited environment is what
# pip-audit sees, and the runner ships 79.0.1 (PYSEC-2026-3447).
dev = ["pytest>=8.0", "ruff>=0.5", "setuptools>=83"]

[tool.setuptools]
# The repository is a document set with one small tool; there is no installable package.
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]
markers = [
    "slow: exercises a real model/LLM; excluded from the gate and CI (run locally with -m slow).",
]
